@@ -150,6 +150,11 @@ Tellico::Data::FieldList ComicBookCollection::defaultFields() {
   field->setCategory(i18n(comic_personal));
   list.append(field);
 
+  field = new Field(QLatin1String("rating"), i18n("Rating"), Field::Rating);
+  field->setCategory(i18n(comic_personal));
+  field->setFlags(Field::AllowGrouped);
+  list.append(field);
+
   field = new Field(QLatin1String("cover"), i18n("Front Cover"), Field::Image);
   list.append(field);
 
